jswt-semantics/src/snapshots/jswt_semantics__test__duplicate_class_declaration_generates_error.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    ClassAlreadyDefined {
        name: "Array",
        span: Span {
            file: "test_duplicate_class_declaration_generates_error",
            module: "module/test_duplicate_class_declaration_generates_error",
            start: 61,
            end: 66,
        },
    },
]
