jswt-semantics/src/snapshots/jswt_semantics__test__duplicate_function_declaration_generates_error.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    FunctionAlreadyDefined {
        name: "test",
        span: Span {
            file: "test.1",
            module: "module/test.1",
            start: 128,
            end: 132,
        },
    },
]
