jswt-semantics/src/snapshots/jswt_semantics__test__duplicate_global_variable_declaration_generates_error.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    VariableAlreadyDefined {
        name: "x",
        span: Span {
            file: "test_duplicate_global_variable_declaration_generates_error",
            module: "module/test_duplicate_global_variable_declaration_generates_error",
            start: 41,
            end: 42,
        },
    },
]
