jswt-semantics/src/snapshots/jswt_semantics__test__duplicate_variable_declaration_generates_error.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    VariableAlreadyDefined {
        name: "x",
        span: Span {
            file: "test.1",
            start: 33,
            end: 34,
        },
    },
]
