jswt-semantics/src/snapshots/jswt_semantics__test__function_return_type_is_checked_when_invoked_error.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    TypeMismatchError {
        span: Span {
            file: "test.1",
            start: 59,
            end: 65,
        },
        expected: Primitive(
            I32,
        ),
        actual: Primitive(
            Boolean,
        ),
    },
    VariableNotDefined {
        name: "x",
        span: Span {
            file: "test.1",
            start: 159,
            end: 160,
        },
    },
    TypeMismatchError {
        span: Span {
            file: "test.1",
            start: 159,
            end: 160,
        },
        expected: Primitive(
            Boolean,
        ),
        actual: Unknown,
    },
]
