jswt-semantics/src/snapshots/jswt_semantics__test__if_statement_expression_must_be_boolean.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    TypeAssignmentError {
        span: Span {
            file: "test.1",
            start: 55,
            end: 61,
        },
        lhs: Primitive(
            Boolean,
        ),
        rhs: Primitive(
            I32,
        ),
    },
]
