jswt-semantics/src/snapshots/jswt_semantics__test__variable_not_defined_generates_error.snap
---
source: jswt-semantics/src/lib.rs
expression: errors

---
[
    VariableNotDefined {
        name: "x",
        span: Span {
            file: "test_variable_not_defined_generates_error",
            module: "module/test_variable_not_defined_generates_error",
            start: 25,
            end: 26,
        },
    },
]
